buttons to icons

--- a/index.html
+++ b/index.html
@@ -80,15 +80,22 @@
             <h2 class="mt-1 align-middle">Angelo Merte</h2>
             <div class="d-flex justify-content-between align-items-center mt-4">
                 <!-- <p class="choose"><span><a href="#">My key people</a></span><span class="mx-2 divider"> I </span>All people</p> -->
-               <div class="profile-info d-flex">
-                <p class="m-0 profile-info-team mr-4"><span class="mr-1">Team:</span> Javascript Development</p>
-                <p class="m-0 profile-info-position"><span class="mr-1">Position:</span> Junior Developer</p>
+               <div class="profile-info d-flex text-truncate">
+                <p class="m-0 profile-info-team mr-4 text-truncate"><span class="mr-1 d-none d-md-inline-block">Team:</span> Javascript Development</p>
+                <p class="m-0 profile-info-position text-truncate"><span class="mr-1 d-none d-md-inline-block">Position:</span> Junior Developer</p>
                </div>
 
                 <div>
-                    <button>Export</button>
-                    <button>Settings</button>
-                    <button>Add to my key people</button>
+                    <div class="buttons d-none d-lg-block">
+                        <button>Export</button>
+                        <button>Settings</button>
+                        <button>Add to my key people</button>
+                    </div>
+                    <div class="icons d-xsm-block d-lg-none">
+                        <a href="#"><i class="material-icons">share</i></a>
+                        <a href="#"><i class="material-icons">settings</i></a>
+                        <a href="#"><i class="material-icons">add</i></a>
+                    </div>
                 </div>
                 <!-- <button>Remove from my key people</button> -->
             </div>
