--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                         <button>Add to my key people</button>
                     </div>
                     <div class="icons d-xsm-block d-lg-none">
-                        <a href="#"><i class="material-icons">share</i></a>
-                        <a href="#"><i class="material-icons">settings</i></a>
-                        <a href="#"><i class="material-icons">add</i></a>
+                        <a href="#"><i class="material-icons archive">save_alt</i></a>
+                        <a href="#"><i class="material-icons settings">settings</i></a>
+                        <a href="#"><i class="material-icons add">person_add</i></a>
                     </div>
                 </div>
                 <!-- <button>Remove from my key people</button> -->
